# mr_sort

./: .gitignore  .gitmodules  README.md  mot_benchmark
detector/: DetModel.py  detector.py  ssd.py  ssd_mobilenet.py  yolo.py  yolov4.py
detector/IR/Ssd/ssd_coco/: frozen_inference_graph.mapping  frozen_inference_graph.xml
detector/IR/Yolo/coco/: frozen_darknet_yolov4_model.mapping  frozen_darknet_yolov4_model.xml
detector/output/MOT20-01/: det.txt
detector/output/MOT20-05/: det.txt
docker/: Dockerfile  container_run.sh
encoder_odometry/: CMakeLists.txt
encoder_odometry/src/: odometry.cpp
ros/data_collector/: CMakeLists.txt  package.xml
ros/data_collector/scripts/: collector.py  data_visualizer.py
ros/encoder_odometry/: package.xml
ros/encoder_odometry/src/: odometry.cpp
tracker/: gt_generator.py  kalman.py  mr_sort.py  sort.py  utils.py
tracker/data/: data_downloads.sh
tracker/data/train/MOT20-02/det/: det.txt
tracker/data/train/MOT20-03/det/: det.txt
tracker/output/: MOT20-01.txt  MOT20-02.txt  MOT20-03.txt  MOT20-05.txt
tracker/scripts/: fiji2gt.py  gt_count.py  gt_visualizer.py  yolo2gt.py
